crates/taut-rpc-macros/tests/ui/non-async-fail.stderr
error: taut_rpc: #[rpc] requires an async fn
 --> tests/ui/non-async-fail.rs:4:1
  |
4 | fn ping() -> &'static str {
  | ^^
